+ fix HighlightRules + fix ngScrollbars + TTL DatabaseStructure  "version": "17.10.1",

--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -31,14 +31,14 @@ body .wrapper {
 
 md-tabs-canvas
 {
-    height: 38px;
-    top:-8px
+    height: 32px;
+    top:-5px
 }
 
 .md-tab {
-    font-size: 12px;
+    font-size: 13px;
     padding-bottom: 0px;
-    padding-top: 10px;
+    padding-top:8px;
 }
 
 .content {
